--- a/src/config/ux430-kabylake.plist
+++ b/src/config/ux430-kabylake.plist
@@ -575,7 +575,7 @@
 			<key>FadtEnableReset</key>
 			<false/>
 			<key>NormalizeHeaders</key>
-			<false/>
+			<true/>
 			<key>RebaseRegions</key>
 			<false/>
 			<key>ResetHwSig</key>
