--- a/src/config/ux430-kabylaker.plist
+++ b/src/config/ux430-kabylaker.plist
@@ -1234,7 +1234,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>lilucpu=9</string>
+				<string></string>
 				<key>run-efi-updater</key>
 				<string>No</string>
 				<key>csr-active-config</key>
