--- a/src/config/ux430-kabylake.plist
+++ b/src/config/ux430-kabylake.plist
@@ -642,9 +642,9 @@
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>AAPL,ig-platform-id</key>
-				<data>AAAbWQ==</data>
+				<data>AAAWGQ==</data>
 				<key>device-id</key>
-				<data>FlkAAA==</data>
+				<data>FhkAAA==</data>
 				<key>hda-gfx</key>
 				<string>onboard-1</string>
 				<key>enable-hdmi20</key>
@@ -1226,7 +1226,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string></string>
+				<string>lilucpu=8</string>
 				<key>run-efi-updater</key>
 				<string>No</string>
 				<key>csr-active-config</key>
