--- a/src/config/ux310-kabylake.plist
+++ b/src/config/ux310-kabylake.plist
@@ -5,7 +5,7 @@
 	<key>#Comment</key>
 	<string>This config is created by @hieplpvip for UX310 (Kaby Lake)</string>
 	<key>#OCVersion</key>
-	<string>0.6.2</string>
+	<string>0.6.3</string>
 	<key>ACPI</key>
 	<dict>
 		<key>Add</key>
@@ -1134,6 +1134,8 @@
 			<true/>
 			<key>ExternalDiskIcons</key>
 			<false/>
+			<key>ForceSecureBootScheme</key>
+			<false/>
 			<key>IncreasePciBarSize</key>
 			<false/>
 			<key>LapicKernelPanic</key>
@@ -1325,6 +1327,8 @@
 	<dict>
 		<key>Automatic</key>
 		<true/>
+		<key>CustomMemory</key>
+		<false/>
 		<key>Generic</key>
 		<dict>
 			<key>AdviseWindows</key>
