--- a/src/config/ux410-kabylake.plist
+++ b/src/config/ux410-kabylake.plist
@@ -24,6 +24,10 @@
 		<key>Patch</key>
 		<array>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>rename _OSI to XOSI</string>
 				<key>Count</key>
@@ -50,6 +54,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>rename _DSM to XDSM</string>
 				<key>Count</key>
@@ -76,6 +84,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>rename SAT0 to SATA</string>
 				<key>Count</key>
@@ -102,6 +114,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>rename LPC to LPCB</string>
 				<key>Count</key>
@@ -128,6 +144,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>rename _REG to XREG in EC0</string>
 				<key>Count</key>
@@ -154,6 +174,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>rename Method(GPRW,2,N) to XPRW</string>
 				<key>Count</key>
@@ -180,6 +204,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>rename _STA methods in MATH and LDR2 device to XSTA</string>
 				<key>Count</key>
@@ -206,6 +234,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(Battery) Rename Method(_BIX,0) to Method(XBIX,0)</string>
 				<key>Count</key>
@@ -232,6 +264,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(Battery) Rename Method(BIFA,0) to Method(XBIF,0)</string>
 				<key>Count</key>
@@ -258,6 +294,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(Battery) Rename Method(SMBR,3,S) to Method(XSMR,3,S)</string>
 				<key>Count</key>
@@ -284,6 +324,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(Battery) Rename Method(SMBW,5,S) to Method(XSMW,5,S)</string>
 				<key>Count</key>
@@ -310,6 +354,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(Battery) Rename Method(FBST,4) to Method(XBST,4)</string>
 				<key>Count</key>
@@ -336,6 +384,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(ATK) rename Method(IANE,1,S) to XANE</string>
 				<key>Count</key>
@@ -362,6 +414,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(ATK) rename Method(_Q0A,0,NS) to XQ0A</string>
 				<key>Count</key>
@@ -388,6 +444,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(ATK) rename Method(_Q0B,0,NS) to XQ0B</string>
 				<key>Count</key>
@@ -414,6 +474,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(ATK) rename Method(_Q0E,0,NS) to XQ0E</string>
 				<key>Count</key>
@@ -440,6 +504,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(ATK) rename Method(_Q0F,0,NS) to XQ0F</string>
 				<key>Count</key>
@@ -466,6 +534,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(ATK) rename Method(_Q11,0,NS) to XQ11</string>
 				<key>Count</key>
@@ -492,6 +564,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(ATK) rename Method(_Q76,0,NS) to XQ76</string>
 				<key>Count</key>
@@ -518,6 +594,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(I2C) rename Method(_STA,0,NS) in GPI0 to XSTA</string>
 				<key>Count</key>
@@ -544,6 +624,10 @@
 				<data></data>
 			</dict>
 			<dict>
+				<key>Base</key>
+				<string></string>
+				<key>BaseSkip</key>
+				<integer>0</integer>
 				<key>Comment</key>
 				<string>(I2C) rename Method(_CRS,0,S) in ETPD to XCRS</string>
 				<key>Count</key>
@@ -608,6 +692,8 @@
 			<false/>
 			<key>EnableWriteUnprotector</key>
 			<true/>
+			<key>ForceBooterSignature</key>
+			<false/>
 			<key>ForceExitBootServices</key>
 			<false/>
 			<key>ProtectMemoryRegions</key>
@@ -1105,6 +1191,8 @@
 			<data></data>
 			<key>Cpuid1Mask</key>
 			<data></data>
+			<key>DummyPowerManagement</key>
+			<false/>
 			<key>MaxKernel</key>
 			<string></string>
 			<key>MinKernel</key>
@@ -1391,6 +1479,21 @@
 			<key>MinVersion</key>
 			<integer>0</integer>
 		</dict>
+		<key>AppleInput</key>
+		<dict>
+			<key>AppleEvent</key>
+			<string>Builtin</string>
+			<key>CustomDelays</key>
+			<string>Auto</string>
+			<key>KeyInitialDelay</key>
+			<integer>0</integer>
+			<key>KeySubsequentDelay</key>
+			<integer>5</integer>
+			<key>PointerSpeedDiv</key>
+			<integer>1</integer>
+			<key>PointerSpeedMul</key>
+			<integer>1</integer>
+		</dict>
 		<key>Audio</key>
 		<dict>
 			<key>AudioCodec</key>
@@ -1475,8 +1578,6 @@
 			<key>AppleBootPolicy</key>
 			<false/>
 			<key>AppleDebugLog</key>
-			<false/>
-			<key>AppleEvent</key>
 			<false/>
 			<key>AppleFramebufferInfo</key>
 			<false/>
